--- a/app/views/end_user/end_users/_mutual_follow.html.erb
+++ b/app/views/end_user/end_users/_mutual_follow.html.erb
@@ -1,7 +1,7 @@
 <% if mutual_follows.empty? %>
-  <p>相互フォローユーザーはいません。</p>
+  <p>相互フォローユーザーはまだいません。</p>
 <% else %>
-  <h4>相互フォローユーザー一覧</h4>
+  <h4>相互フォローユーザー</h4>
 <% end %>
 <table class="table">
   <tbody>
