--- a/app/views/end_user/favorites/create.js.erb
+++ b/app/views/end_user/favorites/create.js.erb
@@ -1,2 +1,3 @@
 $('.favorite_<% @post.id %>').html("<%= j(render partial: 'end_user/favorites/favorite', locals: {target_post: @post}) %>");
+$('.favorites-count').html("<%= j(render partial: 'end_user/favorites/favorite_count', locals: {target_post: @post}) %>");
 
