--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,1 +1,39 @@
-<h1 class="index">end_users/index</h1>
+<div class="col-xs-10 col-xs-offset-2">
+  <div class="col-xs-10">
+    <h4 class="admin-users">ユーザー一覧</h4>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>名前</th>
+          <th>Email</th>
+          <th>評価(rate導入)</th>
+          <th>ステータス</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody class="admin-tbody" style="background-color: white;">
+        <% @end_users.each do |end_user| %>
+          <tr>
+            <td><%= end_user.name %></td>
+            <td><%= end_user.email %></td>
+            <td>評価(rate導入)</td>
+            <td>
+              <% if end_user.is_deleted == true %>
+                退会済み
+              <% else %>
+                活動中
+              <% end %>
+            </td>
+            <td>
+              <%= link_to "詳細", admin_end_user_path(end_user), class: "" %>
+            </td>
+            <td>
+              <%= link_to "編集", edit_admin_end_user_path(end_user), class: "" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
