--- a/app/views/end_user/relationships/_create_follow.html.erb
+++ b/app/views/end_user/relationships/_create_follow.html.erb
@@ -5,7 +5,7 @@
 	  	<%= link_to follower.name, end_user_path(follower) %>
 	  </td>
 	  <td>
-      <%= link_to "", end_user_relationships_path(follower), method: :post, remote: true, class: "fas fa-user-plus btn-edit" %>
+      <%= link_to "", end_user_relationships_path(follower), method: :post, remote: true, class: "fas fa-user-plus follow-btn-style" %>
 	  </td>
 	</tr>
   <% end %>
