--- a/app/views/end_user/relationships/_follow.html.erb
+++ b/app/views/end_user/relationships/_follow.html.erb
@@ -1,7 +1,7 @@
 <% if current_end_user != end_user %>
   <% if end_user.followed_by?(current_end_user) %>
-    <p><%= link_to "", end_user_relationships_path(end_user.id), method: :delete, remote: true, class: "fas fa-user-minus btn-edit" %></p>
+    <p><%= link_to "", end_user_relationships_path(end_user.id, user: "end_user"), method: :delete, remote: true, class: "fas fa-user-minus follow-btn-style" %></p>
   <% else %>
-    <p><%= link_to "", end_user_relationships_path(end_user.id), method: :post, remote: true, class: "fas fa-user-plus btn-edit" %></p>
+    <p><%= link_to "", end_user_relationships_path(end_user.id, user: "current_end_user"), method: :post, remote: true, class: "fas fa-user-plus follow-btn-style" %></p>
   <% end %>
 <% end %>
