--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,1 +1,25 @@
-<h1 class="index">genres/index</h1>
+<div class="col-xs-6 col-xs-offset-4">
+  <div class="genre-head">
+    <h4 class="genre-head_title">ジャンル作成</h4>
+    <%= form_with model: @genre_new, url: admin_genres_path, method: :post, remote: true do |f| %>
+      <%= f.text_field :name, autofocus: true, placeholder: "ジャンル名を入力...", size: '26', class: "genre-head_form" %>
+      <%= f.select :is_active, [["有効",true],["無効", false]], {include_blank: true}, class: "genre-head_select" %>
+      <%= f.submit "作成", class: "genre-head_btn" %>
+    <% end %>
+  </div>
+  <div class="genres">
+    <h4>ジャンル一覧</h4>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>ジャンル名</th>
+          <th>ステータス</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody class="genres-ajax" style="background-color: white;">
+        <%= render 'index', genres: @genres %>
+      </tbody>
+    </table>
+  </div>
+</div>
