--- a/app/views/end_user/posts/_search_index.html.erb
+++ b/app/views/end_user/posts/_search_index.html.erb
@@ -1,7 +1,7 @@
-<main class="posts-all">
+<main class="main">
   <% public_posts.each do |public_post| %>
-  <div class="post-box">
-    <div class="post-user_name">
+  <div class="content">
+    <div class="content_user">
       <span>
         <%= link_to  end_user_path(public_post.end_user) do %>
           <% if public_post.images.present? %>
@@ -13,40 +13,36 @@
       <span><%= public_post.end_user.name %></span>
         <% end %>
     </div>
-    <div class="posts_image">
+    <div class="content_image">
       <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
     </div>
-    <div class="post-bottom">
-      <div class="inline-icon">
-        <span class="icons">
-          <%= link_to post_path(public_post) do %>
-            <i class="far fa-comment-dots fa-size-post" aria-hidden="true"></i>
-          <% end %>
-          <span class="favorite_<% public_post.id %>">
+    <div class="content_foot">
+      <div class="list-icon">
+        <span class="icon">
+          <%= link_to "", post_path(public_post), class: "far fa-comment-dots icon-size" %>
+          <spam class="favorite_<% public_post.id %>">
             <%= render 'end_user/favorites/favorite', target_post: public_post %>
-          </span>
-          <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms fa-size-post" %>
-          <span class="bookmark_<% public_post.id %>">
+          </spam>
+          <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
+          <spam class="bookmark_<% public_post.id %>">
             <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
-          </span>
+          </spam>
         </span>
       </div>
       <div class="favorites-count">
         <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
       </div>
-      <div class="post-body_index">
-        <div class="post-body">
-          <h4 class="title_index"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
-          <h5 class="subtitle"><%= public_post.subtitle %></h5>
-          <ul class="post-subtitle">
-            <li class="post-time"><%= public_post.created_at.strftime('%Y/%m/%d') %></li>
-            <li class="view-detail-btn">
-              <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
-            </li>
-          </ul>
-          <div class="post-comment">
-            <%= render 'end_user/comments/form', target_post: public_post, comment: comment_new %>
-          </div>
+      <div class="post-body">
+        <h4 class="post-title"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
+        <h5 class="subtitle"><%= public_post.subtitle %></h5>
+        <ul class="detail-list">
+          <li class="create-time"><%= public_post.created_at.strftime('%Y/%m/%d') %></li>
+          <li class="view-detail-btn">
+            <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
+          </li>
+        </ul>
+        <div class="post-comment">
+          <%= render 'end_user/comments/form', target_post: public_post, comment: comment_new %>
         </div>
       </div>
     </div>
