--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -1,94 +1,55 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-10 col-xs-offset-1"></div></div>
-    <div class="col-xs-7 col-xs-offset-1">
-      <main class="posts-all">
-        <% @public_posts.each do |public_post| %>
-        <div class="post-box">
-          <div class="post-user_name">
-            <span>
-              <%= link_to  end_user_path(public_post.end_user) do %>
-                <% if public_post.images.present? %>
-                  <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
-                <% else %>
-                  <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
-                <% end %>
-            </span>
-            <span><%= public_post.end_user.name %></span>
-              <% end %>
-          </div>
-          <div class="posts_image">
-            <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
-          </div>
-          <div class="post-bottom">
-            <div class="inline-icon">
-              <span class="icons">
-                <%= link_to post_path(public_post) do %>
-                  <i class="far fa-comment-dots fa-size-post" aria-hidden="true"></i>
-                <% end %>
-                <span class="favorite_<% public_post.id %>">
-                  <%= render 'end_user/favorites/favorite', target_post: public_post %>
-                </span>
-                <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms fa-size-post" %>
-                <span class="bookmark_<% public_post.id %>">
-                  <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
-                </span>
-              </span>
-            </div>
-            <div class="favorites-count">
-              <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
-            </div>
-            <div class="post-body_index">
-              <div class="post-body">
-                <h4 class="title_index"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
-                <h5 class="subtitle"><%= public_post.subtitle %></h5>
-                <ul class="post-subtitle">
-                  <li class="post-time"><%= public_post.created_at.strftime('%Y/%m/%d') %></li>
-                  <li class="view-detail-btn">
-                    <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
-                  </li>
-                </ul>
-                <div class="post-comment">
-                  <%= render 'end_user/comments/form', target_post: public_post, comment: @comment_new %>
-                </div>
-              </div>
-            </div>
+<div class="col-xs-7 col-xs-offset-1">
+  <main class="main">
+    <% @public_posts.each do |public_post| %>
+    <div class="content">
+      <div class="content_user">
+        <span>
+          <%= link_to  end_user_path(public_post.end_user) do %>
+            <% if public_post.images.present? %>
+              <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
+            <% else %>
+              <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
+            <% end %>
+        </span>
+        <span><%= public_post.end_user.name %></span>
+          <% end %>
+      </div>
+      <div class="content_image">
+        <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
+      </div>
+      <div class="content_foot">
+        <div class="list-icon">
+          <span class="icon">
+            <%= link_to "", post_path(public_post), class: "far fa-comment-dots icon-size" %>
+            <spam id="favorite_<%= public_post.id %>">
+              <%= render 'end_user/favorites/favorite', target_post: public_post %>
+            </spam>
+            <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
+            <spam id="bookmark_<%= public_post.id %>">
+              <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
+            </spam>
+          </span>
+        </div>
+        <div id="favorites-count_<%= public_post.id %>">
+          <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
+        </div>
+        <div class="post-body">
+          <h4 class="post-title"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
+          <h5 class="subtitle"><%= public_post.subtitle %></h5>
+          <ul class="detail-list">
+            <li class="creation-time"><%= public_post.created_at.strftime('%Y/%m/%d') %></li>
+            <li class="view-detail-btn">
+              <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
+            </li>
+          </ul>
+          <div class="comment-text">
+            <%= render 'end_user/comments/form', target_post: public_post, comment: @comment_new %>
           </div>
         </div>
-        <% end %>
-      </main>
-    </div>
-    <div class="col-xs-3 fixed-menu">
-      <h5>並び替え機能をつける</h5>
-      <div class="search-box">
-        <%= form_with url: search_path, method: :get, local: true do |f| %>
-          <i class="fas fa-search"></i>
-          <%= f.text_field 'search[value]', placeholder: "検索ワードを入力...", size: "29" %><br>
-          <div class="text-right search-select">
-            <%= f.select 'search[model]', options_for_select({ "投稿を探す" => "post", "ユーザーを探す" => "end_user" }) %>
-            <%= f.select 'search[how]', options_for_select({ "部分一致" => "partical", "完全一致" => "match" }) %>
-            <%= f.submit :"検索" %>
-          </div>
-        <% end %>
       </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ジャンルから探す</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @genres.each do |genre| %>
-          <tr>
-            <td>
-              <!--modelの値も送ったほうが良い、適当な文字列で良いかと思う-->
-              <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[model]': "post") %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
     </div>
-  </div>
+    <% end %>
+  </main>
 </div>
-
+<!--検索用サイドバー-->
+<%= render 'end_user/searchs/search_sidebar', genres: @genres %>
