--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -20,7 +20,7 @@
             <td>評価(rate導入)</td>
             <td>
               <% if end_user.is_deleted == true %>
-                退会済み
+                <p class="denger-message">退会済み</p>
               <% else %>
                 活動中
               <% end %>
