--- a/app/assets/stylesheets/admin/posts.scss
+++ b/app/assets/stylesheets/admin/posts.scss
@@ -1,6 +1,40 @@
 // Place all the styles related to the admin::posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// admin/posts/index
 .admin-posts {
   margin: 30px 0 20px 10px;
+}
+
+// admin/posts/show
+
+.admin-content-image {
+  border: 2px solid gray;
+  border-radius: 0.67em;
+  margin-right: 100px;
+}
+
+.admin-content_top > .btn-sm {
+  margin-right: 20px;
+}
+
+.response-list {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  margin: 15px 0;
+
+  &_detail {
+    margin-right: 20px;
+
+    .link-btn {
+      margin-left: 8px;
+      background-color: #d9e2e0;
+    }
+  }
+}
+
+.td-color {
+  background-color: white;
 }
