--- a/app/views/end_user/searchs/_search_sidebar.html.erb
+++ b/app/views/end_user/searchs/_search_sidebar.html.erb
@@ -1,15 +1,44 @@
 <div class="col-xs-3 fixed-sidebar">
-  <h5>並び替え機能をつける</h5>
-  <div class="search-box">
+  <div class="search">
     <%= form_with url: search_path, method: :get, local: true do |f| %>
       <i class="fas fa-search"></i>
-      <%= f.text_field 'search[value]', placeholder: "検索ワードを入力...", size: "29" %><br>
-      <div class="text-right search-select">
+      <%= f.text_field 'search[value]', placeholder: "検索ワードを入力...", size: "28", style: "padding: 4px; border: none;
+      outline: none; border-bottom: 1px solid #666; margin-bottom: 5px;" %><br>
+      <div class="text-right search_select">
         <%= f.select 'search[model]', options_for_select({ "投稿を探す" => "post", "ユーザーを探す" => "end_user" }) %>
         <%= f.select 'search[how]', options_for_select({ "部分一致" => "partical", "完全一致" => "match" }) %>
         <%= f.submit "検索" %>
       </div>
     <% end %>
+  </div>
+  <div class="sort-menu dropdown">
+    <button class="btn-sm btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+		  選択肢から並び替え
+		<span class="caret"></span>
+	  </button>
+	  <ul class="dropdown-menu" role="menu">
+	  	<li role="presentation" class="dropdown-header">費用から並び替え</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  	<li role="presentation" class="dropdown-header">難易度から並び替え</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  	<li role="presentation" class="dropdown-header">作業時間から並び替え</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  	<li role="presentation">
+	  	  
+	  	</li>
+	  </ul>
   </div>
   <table class="table">
     <thead>
