--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -35,7 +35,7 @@
     </li>
     <li>
       <%= link_to destroy_admin_session_path, method: :delete do %>
-        <span class="glyphicon glyphicon-envelope">ログアウト</span>
+        <span class="glyphicon glyphicon-log-out">ログアウト</span>
       <% end %>
     </li>
   </ul>
