[create]sort(posts/index&searchs/search)

--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -52,4 +52,4 @@
   </main>
 </div>
 <!--検索用サイドバー-->
-<%= render 'end_user/searchs/search_sidebar', genres: @genres %>
+<%= render 'index', genres: @genres %>
