--- a/app/assets/stylesheets/end_user/posts.scss
+++ b/app/assets/stylesheets/end_user/posts.scss
@@ -108,12 +108,49 @@
   width: 300px!important;
   border: 1px solid gray;
   background-color: white;
-  position: fixed;
+  position: fixed!important;
   top: 72px;
   right: 290px;
-}
-.sort-menu {
-  margin: 10px 0;
+
+  .search {
+    margin: 10px 0;
+    padding-bottom: 10px;
+    border-bottom: 2px solid gray;
+
+    .search_form {
+      padding: 4px;
+      border: none;
+      outline: none;
+      border-bottom: 1px solid #666;
+      margin-bottom: 5px;
+    }
+
+    .search_select {
+
+      #search_model, #search_how {
+        padding: 3px;
+        border-radius: 0.67em;
+        outline: none;
+      }
+      .search-btn {
+        padding: 3px;
+        border-radius: 0.67em;
+        border: none;
+        border: 1px solid gray;
+        outline: none;
+      }
+    }
+  }
+  .sort-menu {
+    margin-top: 15px;
+    padding-bottom: 15px;
+    border-bottom : 2px solid gray;
+
+    .btn-default {
+      padding: 7px 12px;
+      font-size: 15px;
+    }
+  }
 }
 
 
