--- a/app/views/end_user/comments/_comment.html.erb
+++ b/app/views/end_user/comments/_comment.html.erb
@@ -1,3 +1,6 @@
+<% if target_post.comments.empty? %>
+  <p>コメントはありません...</p>
+<% end %>
 <% target_post.comments.each do |comment| %>
   <div class="comment-section_head">
     <h5 class="commented-user">
