--- a/app/views/end_user/posts/show.html.erb
+++ b/app/views/end_user/posts/show.html.erb
@@ -4,7 +4,7 @@
       <div class="top-left">
         <span>
           <%= link_to  end_user_path(@post.end_user) do %>
-            <% if @post.images.present? %>
+            <% if @post.end_user.images.present? %>
               <img src='<%= @post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
             <% else %>
               <%= image_tag "sample.jpg", size: '50x50' %>
