--- a/app/views/end_user/posts/new.html.erb
+++ b/app/views/end_user/posts/new.html.erb
@@ -72,43 +72,6 @@
       </div>
     <% end %>
   </div>
-  <div class="col-xs-4 post-nav">
-    <h5 class="title_bar">投稿の書き方</h5>
-    <input id="acd-check1" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check1"><i class="fas fa-chevron-down"></i>投稿のタイトル</label>
-    <div class="acd-content">
-        <p>投稿するDIYに合ったタイトルを付けてください。</p>
-    </div>
-    <input id="acd-check2" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check2"><i class="fas fa-chevron-down"></i>キャッチコピー</label>
-    <div class="acd-content">
-        <p>投稿するDIYの魅力や工夫した点などを端的にまとめて記載しましょう。</p>
-    </div>
-    <input id="acd-check3" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check3"><i class="fas fa-chevron-down"></i>DIYの写真</label>
-    <div class="acd-content">
-        <p>DIYの完成品を載せてください。友達や他のアプリ利用者にイメージが伝わるような写真がベストです。</p>
-    </div>
-    <input id="acd-check4" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check4"><i class="fas fa-chevron-down"></i>材料・購入店</label>
-    <div class="acd-content">
-        <p>材料が細かく、多い場合は作り方の欄に記載してください。購入店はわかる範囲で問題ありません。</p>
-    </div>
-    <input id="acd-check5" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check5"><i class="fas fa-chevron-down"></i>作り方</label>
-    <div class="acd-content">
-        <p>初心者の方でもわかるように書いてください。写真はある場合のみ添付してください。</p>
-    </div>
-    <input id="acd-check6" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check6"><i class="fas fa-chevron-down"></i>リンク貼り付け</label>
-    <div class="acd-content">
-        <p>参考にしたYouTube、自身のYouTubeチャンネル、Instagram等などご自由に載せてください。</p>
-    </div>
-    <input id="acd-check7" class="acd-check" type="checkbox">
-    <label class="acd-label" for="acd-check7"><i class="fas fa-chevron-down"></i>自由記入欄</label>
-    <div class="acd-content">
-        <p>注意点やこつ、その他にも上記に記載しきれなかった内容などご自由に記載してください。</p>
-    </div>
-  </div>
+  <%= render 'nav_sidebar' %>
 </div>
 
