--- a/app/views/end_user/relationships/create.js.erb
+++ b/app/views/end_user/relationships/create.js.erb
@@ -1,6 +1,6 @@
 $('.follow-btn').html("<%= j(render partial: 'end_user/relationships/follow', locals: {end_user: @end_user}) %>");
 $('.follow-btn2').html("<%= j(render partial: 'end_user/relationships/create_follow', locals: {followers: @followers}) %>");
-$('.unfollow<%= current_end_user.id %>').html("<%= j(render partial: 'end_user/end_users/mutual_follow', locals: {mutual_follows: @mutual_follows, end_user: @end_user}) %>");
+$('.unfollow<%= current_end_user.id %>').html("<%= j(render partial: 'end_user/end_users/mutual_follow', locals: {mutual_follows: @mutual_follows, end_user: @user}) %>");
 
 
 
